<resources>
    <string name="app_name">Games Wave</string>
    <!--    Login-->
    <string name="TxtEmailFunc">Email</string>
    <string name="TxtSenha">Senha</string>
    <string name="TxtCPF">CPF</string>
    <string name="TxtEntrar">Entrar</string>
    <string name="TxtCriarconta">Criar uma conta</string>

    <string name="TxtEsquesioASenha">Esqueceu a Senha?</string>
    <string name="insira_seus">Insira seus dados para recuperar sua senha.</string>
    <string name="txtAutenticar">AUTENTICAR</string>

    <!--Cadastro user -->
    <string name="TxtCadastro">Cadastre-se</string>
    <string name="TxtcadastroAux">Crie seu perfil para poder efetuar compar na loja.</string>
    <string name="txtNomeUser">Seu Nome</string>
    <string name="TxtTel">Telefone</string>
    <string name="txtDataNasc">Data de Nascimento </string>

    <!-- Tela da conta user-->
    <string name="TxtSuporte">Suporte</string>
    <string name="TxtInfoLegais">Informações Legais</string>
    <string name="TxtInfos">Informações</string>
    <string name="TxtTermosCond">Termos de Uso</string>
    <string name="TxtAlterdados">Alterar Dados</string>
    <string name="Txtpedidos">Meus pedidos</string>

    <!--Categoria -->
    <string name="TxtCat">Categoria:</string>
    <string name="TxtLanc">Lançamentos:</string>
    <string name="TxtTiro">Tiro</string>
    <string name="TxtRPG">RPG</string>
    <string name="txtViewSimula">Simulação</string>
    <string name="TxtTerror">Terror</string>
    <string name="TxtAuxDesc">Descrição</string>
    <string name="TxtAuxPreco">Preço</string>
    <string name="TxtPesc">Pesquisar...</string>

    <!-- Carrinho-->
    <string name="TxtAddCarrinho">Adiconar ao Carrinho</string>
    <string name="TxtVazioCarrinho">Seu Carrinho esta vazio, Deseja Adicionar Itens</string>
    <string name="TxtAuxCarrinho">Carrinho</string>
    <string name="TxtAuxTotal">Total</string>
    <string name="TxtBtnComprar">Conluir compra</string>

    <!--texto menu -->
    <string name="TxtPedidos">Meus pedidos</string>
    <string name="TxtFav">Favoritos</string>
    <string name="TxtSair">Sair</string>
    <string name="TxtHome">Home</string>
    <string name="TxtConta">Conta</string>
    <string name="TxtConfig">Configurações</string>
</resources>