<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bglogin_roxo"
    tools:context=".login">

    <ImageView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/logogameswave"
        android:textSize="42sp"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editUserLogin"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_margin="40dp"
        android:background="@drawable/bg_txt_username"
        android:hint="@string/TxtEmailFunc"
        android:inputType="textEmailAddress"
        android:paddingStart="48dp"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:text="Jularia@gmail.com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/EditSenhaLogin"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_margin="40dp"
        android:textSize="16sp"
        android:paddingStart="48dp"
        android:hint="@string/TxtSenha"
        android:text="123456"
        android:textColor="@color/colorText"
        android:inputType="textPassword"
        android:background="@drawable/bg_txt_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUserLogin" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="206dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/borda_aredondada"
        android:text="@string/TxtEntrar"
        android:textColor="@color/CinzaClaro"
        app:backgroundTint="@color/BaseRosa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditSenhaLogin" />

    <TextView
        android:id="@+id/txtEsqueceu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:text="@string/TxtEsquesioASenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/TxtCriarConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:textSize="16sp"
        android:text="@string/TxtCriarconta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEsqueceu" />
</androidx.constraintlayout.widget.ConstraintLayout>