<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BaseRoxo"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/TxtEdtPesquisa"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/borda_bar_de_pesquisa"
            android:backgroundTint="#F1F1F1"
            android:drawablePadding="5dp"
            android:textColor="@color/black"
            android:hint="@string/TxtPesc"
            android:inputType="textPersonName"
            android:maxWidth="300dp"
            android:paddingStart="12dp"
            android:paddingEnd="8dp"
            android:text=""
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewPesquisa"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:padding="5dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="52dp"
            android:src="@drawable/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TxtEdtPesquisa" />


        <View
            android:id="@+id/line_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_margin="17dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/banner" />


        <TextView
            android:id="@+id/txtViewTiro"
            style="@style/TxtPadraoTxtClaro"
            android:text="@string/TxtRPG"
            android:textStyle="bold"
            android:layout_marginStart="21dp"
            android:layout_marginBottom="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/line_1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_ProdCatRPG"
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtViewTiro"
            tools:listitem="@layout/produto_item"
            tools:visibility="visible" />

        <View
            android:id="@+id/line_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_margin="17dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerview_ProdCatRPG" />

        <TextView
            android:id="@+id/txtViewTerror"
            style="@style/TxtPadraoTxtClaro"
            android:layout_marginStart="21dp"
            android:textStyle="bold"
            android:text="@string/TxtTerror"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_ProdCatTerror"
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtViewTerror"
            tools:listitem="@layout/produto_item"
            tools:visibility="visible" />

        <View
            android:id="@+id/line_3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_margin="17dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerview_ProdCatTerror" />

        <TextView
            android:id="@+id/txtViewRPG"
            style="@style/TxtPadraoTxtClaro"
            android:layout_marginStart="21dp"
            android:textStyle="bold"
            android:text="@string/TxtTiro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_ProdCatTiro"
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtViewRPG"
            tools:listitem="@layout/produto_item"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>