<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/BaseRoxo"
    android:layout_height="match_parent"
    tools:context=".DetelhesProd">

    <ScrollView
        android:id="@+id/TelaToda"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp">

            <View
                android:id="@+id/ToobarVolta"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/BaseRoxoescuro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/imageViewVoltarHome"
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/seta_voltar" />

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_marginEnd="42dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewVoltarHome"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logogameswave" />

            <ImageView
                android:id="@+id/imgviewProd"
                android:layout_width="match_parent"
                android:layout_height="380dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="-10dp"
                app:layout_constraintBottom_toTopOf="@+id/campoNomepord"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ToobarVolta"
                app:srcCompat="@drawable/logogameswave" />


            <View
                android:id="@+id/campoNomepord"
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:background="@drawable/borda_pouco_aredondada"
                android:backgroundTint="@color/BaseRoxoescuro"
                android:layout_margin="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgviewProd"/>

        <TextView
            android:id="@+id/textViewNomeProduto"
            style="@style/TxtPadraoTxtClaro"
            android:layout_marginStart="24dp"
            android:text="Jogo"
            android:layout_marginTop="32dp"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgviewProd" />

            <TextView
                android:id="@+id/textViewPreco"
                style="@style/TxtPadraoTxtClaro"
                android:text="R$ 447.99"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_margin="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNomeProduto" />

            <Button
                android:id="@+id/btnAddCarrinho"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginEnd="22dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/borda_aredondada"
                android:backgroundTint="@color/BaseRosa"
                android:text="@string/TxtAddCarrinho"
                android:textAllCaps="false"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNomeProduto" />


            <TextView
                android:id="@+id/textViewDescAux"
                style="@style/TxtPadraoTxtClaro"
                android:layout_marginStart="15dp"
                android:layout_marginTop="24dp"
                android:text="@string/TxtAuxDesc"
                android:textColor="@color/CinzaClaro"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:backgroundTint="@color/BaseRosa"
                android:background="@drawable/borda_aredondada"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/campoNomepord" />

            <TextView
                android:id="@+id/textViewDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TxtPadraoTxtClaro"
                android:layout_marginStart="12dp"
                android:layout_margin="20dp"
                android:text="@string/TxtAuxDesc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDescAux" />

            <TextView
                android:id="@+id/textViewCatAux"
                style="@style/TxtPadraoTxtClaro"
                android:layout_marginStart="15dp"
                android:layout_marginTop="45dp"
                android:text="@string/TxtCat"
                android:textColor="@color/CinzaClaro"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:backgroundTint="@color/BaseRosa"
                android:background="@drawable/borda_aredondada"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDesc" />


            <TextView
                android:id="@+id/textViewCat"
                style="@style/TxtPadraoTxtClaro"
                android:layout_marginStart="5dp"
                android:layout_marginTop="49dp"
                android:text="Tiro"
                app:layout_constraintStart_toEndOf="@+id/textViewCatAux"
                app:layout_constraintTop_toBottomOf="@+id/textViewDesc" />

    <TextView
        android:id="@+id/textViewLanAux"
        style="@style/TxtPadraoTxtClaro"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/TxtLanc"
        android:textColor="@color/CinzaClaro"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:backgroundTint="@color/BaseRosa"
        android:background="@drawable/borda_aredondada"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCatAux" />

            <TextView
                android:id="@+id/textViewDateLanc"
                style="@style/TxtPadraoTxtClaro"
                android:layout_marginStart="4dp"
                android:layout_marginTop="24dp"
                android:text="2014"
                app:layout_constraintStart_toEndOf="@+id/textViewLanAux"
                app:layout_constraintTop_toBottomOf="@+id/textViewCatAux" />

            <ImageView
        android:id="@+id/ImgClasInd"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/classind_l"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLanAux" />


            <TextView
                android:id="@+id/textViewComentario"
                style="@style/TxtPadraoTxtClaro"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="Comentarios"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/CinzaClaro"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:backgroundTint="@color/BaseRosa"
                android:background="@drawable/borda_aredondada"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ImgClasInd" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewComentario"
        style="@style/Theme.MaterialComponents.DayNight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:background="@color/BaseRoxo"
        android:divider="@color/Cinza"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewComentario" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/BaseRosa"
        app:layout_constraintBottom_toBottomOf="@+id/TelaToda"
        app:layout_constraintEnd_toEndOf="@+id/TelaToda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TelaToda" />
</androidx.constraintlayout.widget.ConstraintLayout>